[package]
name = "zorin"
version = "0.0.0"
edition = "2021"
description = "Date and time library"
documentation = "https://docs.rs/zorin"
homepage = "https://github.com/ecmatthee/zorin"
readme = "readme.md"
repository = "https://github.com/ecmatthee/zorin"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
